Disable interrupts when updating real time clock. Fixes #7872. Seems to have been introduced in r42116.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42648 a95241bf-73f2-0310-859d-f6bbb57e9c96